src/test/deca/syntax/invalid/while_variable.deca
// Description:
//    On utilise le mot while comme une variable
//
// Resultats:
//    Erreur du parser ligne 11
//
// Historique:
//    Cree le 09/01/2024

{
    int while = 3;
}
